@@ -1,9 +1,14 @@
+2005-11-23 Niklas Knutsson  <nq@altern.org>
+
+	* Do not split up utf8 characters and search for spaces when wrapping very long results
+
 2005-11-22 Niklas Knutsson  <nq@altern.org>
 
 	* Factorize and simplify in a separate thread that can be stopped and show progress dialog
 	* Add "Enable/Disable Completion", "Read Precision", "Limit Implicit Multiplication", "RPN Mode", and "Meta Modes"
 	  to expression entry popup menu
 	* Add "Clear" to history popup menu
+	* Allow factorization print option (for (3/4*(x+1))/(y+1))
 
 2005-11-19 Niklas Knutsson  <nq@altern.org>
 
